# binance-rs

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml  tea
.github/workflows/: rust-clippy.yml  rust.yml
benches/: websocket_benchmark.rs
binance_test_cpp/: Makefile  README  libcallcpp.cpp  main  main.cpp
examples/: Cargo.toml  README.md  binance_endpoints.rs  binance_futures_endpoints.rs  binance_futures_userstream.rs  binance_futures_websockets.rs  binance_save_all_trades.rs  binance_websockets.rs  endpoints.rs  websockets.rs  ws.rs
examples/src/: binance_endpoints.rs  binance_save_all_trades.rs  binance_websockets.rs  main.rs  main.rs.fmt
src/: account.rs  account.rs.fmt  api.rs  client.rs  config.rs  error.rs  errors.rs  ffi.rs  general.rs  lib.rs  market.rs  market.rs.fmt  model.rs  model.rs.fmt  savings.rs  transport.rs  userstream.rs  userstream.rs.fmt  util.rs  websockets.rs  websockets.rs.fmt  withdraw.rs
src/client/: account.rs  general.rs  market.rs  mod.rs  userstream.rs  websocket.rs
src/futures/: account.rs  general.rs  market.rs  mod.rs  model.rs  userstream.rs  websocket.rs  websockets.rs
src/model/: mod.rs  order.rs  websocket.rs
src/rest/: account.rs  market.rs  mod.rs  websocket.rs
tests/: account.rs  account_tests.rs  futures_account_tests.rs  futures_general_tests.rs  futures_market_test.rs  general_tests.rs  get_account.rs  market_tests.rs  ping.rs  savings_tests.rs  util_tests.rs
tests/common/: mod.rs
tests/mocks/account/: accept_quote.json  cancel_all_open_orders.json  cancel_order.json  daily_account_snapshot.json  get_account.json  get_open_orders.json  limit_buy.json  limit_sell.json  market_buy.json  market_sell.json  market_sell_using_quote_quantity.json  order_market_buy_using_quote_quantity.json  order_status.json  quote.json  stop_limit_buy.json  stop_limit_sell.json  trade_history.json
tests/mocks/futures/account/: change_initial_leverage.json  change_position_mode.json  custom_order_coin_m.json  get_income_history.json  leverage_brackets.json  stop_market_close_position_buy.json  stop_market_close_position_sell.json
tests/mocks/futures/market/: open_interest_statistics.json
tests/mocks/general/: exchangeInfo.json  server_time.json
tests/mocks/market/: get_24h_price_stats.json  get_all_24h_price_stats.json  get_all_book_tickers.json  get_all_prices.json  get_average_price.json  get_book_ticker.json  get_depth.json  get_klines.json  get_price.json
