[package]
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Weiyuan Wu <weiyuan@crows.land>"]
description = "Rust Library for the Binance API (Async)"
documentation = "https://docs.rs/crate/binance-async"
edition = "2018"
keywords = ["cryptocurrency", "trading", "binance", "async"]
license = "MIT OR Apache-2.0"
name = "binance-async"
readme = "README.md"
repository = "https://github.com/dovahcrow/binance-async-rs"
version = "0.2.0"

[badges]
travis-ci = {repository = "dovahcrow/binance-async-rs"}

[lib]
name = "binance_async"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = {version = "0.4", features = ["serde"]}
fehler = "1"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
log = "0.4"
reqwest = {version = "0.11", features = ["json"]}
result = "1"
rust_decimal = {version = "1", features = ["serde-with-str"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_qs = "0.12"
sha2 = "0.10"
sugar = "0.2"
thiserror = "1"
tokio = "1"
tokio-tungstenite = "0.18"
tungstenite = "0.18"
url = "2"

[dev-dependencies]
env_logger = "0.10"
tokio = {version = "1", features = ["rt", "macros"]}
