[package]
name = "binance-app"
version = "0.2.3"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]

[[bin]]
name = "binance_endpoints"
path = "src/binance_endpoints.rs"

[[bin]]
name = "binance_websockets"
path = "src/binance_websockets.rs"

[[bin]]
name = "binance_save_all_trades"
path = "src/binance_save_all_trades.rs"

[dependencies]
binance = { path = "../" }
csv = "1.0.0"